@@ -1,3 +1,6 @@
+--------- Market Version 71 (2.22) --------------
+ * Rewind bug has been fixed
+
 --------- Market Version 70 (2.21) --------------
  * Comprezza has been highly improved
 
